<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tipsy Draw</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="color">COLOR</string>
    <string name="size">TEXT SIZE</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="nibsize">Nib Size:</string>
    <string name="marker">Marker:</string>
    <string name="godraw">Go Draw!</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="image">image string</string>
    <string name="imagedesc">Image</string>
    <string name="drawapp">--Draw App--</string>
    <string name="titlebar">Title Bar</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="pic">Pic</string>
    <string name="tipsy">--Tipsy Draw--</string>
    <color name="background">#66CCFF</color>
    <string name="tipsy_draw">Tipsy Draw</string>
    <string name="choose_black">black</string>
    <string name="choose_green">green</string>
    <string name="choose_purple">purple</string>
    <string name="choose_orange">orange</string>

</resources>
